Initial commit for DiscoveryWS, Discovery ThreadService, Discovery Framework from discovery branch. pl refer changelogs for more info.
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@6646 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/src/server/Makefile.am
+++ b/simias/src/server/Makefile.am
@@ -1,4 +1,4 @@
-SUBDIRS = Simias.Server Simias.HostService Simias.HttpFile Simias.Rss Simias.LdapProvider Simias.ADLdapProvider Simias.OpenLdapProvider Simias.ClientUpdate setup
+SUBDIRS = Simias.Server Simias.HostService Simias.HttpFile Simias.Rss Simias.LdapProvider Simias.ADLdapProvider Simias.OpenLdapProvider Simias.ClientUpdate setup DiscoveryWS
 
 DIST_SUBDIRS = $(SUBDIRS) setup
 
