--- a/simias/configure.in
+++ b/simias/configure.in
@@ -654,6 +654,8 @@ src/core/libsimias/Makefile
 src/server/Makefile
 src/server/Simias.config
 src/server/setup/Makefile
+src/server/DiscoveryWS/Makefile
+src/server/DiscoveryWS/AssemblyInfo.cs
 src/server/Simias.HttpFile/Makefile
 src/server/Simias.Rss/Makefile
 src/server/Simias.Server/Makefile
