ClientUpdate.asmx.cs: Added web methods to check whether client         and server are compatible. Done based on store version.
        Store.cs: added a property to retrieve store version

        Credentials.cs: Added Status codes for cliet-server
        compatibility.
        


git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@6664 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/src/server/Simias.ClientUpdate/version.config
+++ b/simias/src/server/Simias.ClientUpdate/version.config
@@ -13,6 +13,6 @@
          to be upgraded here. The specified file must be in
          the update/windows directory.
          Example: <filename>ifolder3-3.0.20051203-1-setup.exe</filename> -->
-    <filename></filename>
+    <filename>ifolder3-3.5.7008.1-1-setup.exe</filename>
 
 </versioninfo>
