Make GetRAList and GetRACertificate unauthenticated calls.
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@6688 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/src/core/Common/Simias.config.in
+++ b/simias/src/core/Common/Simias.config.in
@@ -1,6 +1,6 @@
 <configuration>
   <section name ="Authentication">
-    <setting name="SimiasAuthNotRequired" value="Login.ashx, Simias.asmx:PingSimias, POService.asmx:Invite" />
+    <setting name="SimiasAuthNotRequired" value="Login.ashx, Simias.asmx:PingSimias, POService.asmx:Invite, Simias.asmx:GetRAList, Simias.asmx:GetRACertificate" />
     <setting name="SimiasRequireSSL" value="no" />
   </section>
   <section name="StoreProvider">
