--- a/simias/src/server/Simias.config.in
+++ b/simias/src/server/Simias.config.in
@@ -9,7 +9,7 @@
     <setting name="Name" value="Host1" />
   </section>
   <section name="Authentication">
-	<setting name="SimiasAuthNotRequired" value="Registration.asmx, Login.ashx, Simias.asmx:PingSimias, DomainService.asmx:GetDomainID, pubrss.ashx, pubsfile.ashx" />
+	<setting name="SimiasAuthNotRequired" value="Registration.asmx, Login.ashx, Simias.asmx:PingSimias, DomainService.asmx:GetDomainID, pubrss.ashx, pubsfile.ashx, Simias.asmx:GetRAList, Simias.asmx:GetRACertificate" />
 	<setting name="SimiasRequireSSL" value="no" />
   </section>
   <section name="Identity">
