Certificate display page added for web-acces Encryption
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@6711 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/src/webaccess/Makefile.am
+++ b/simias/src/webaccess/Makefile.am
@@ -33,6 +33,7 @@ iFolderWeb_CSFILES = \
 	$(srcdir)/UploadModule.cs \
 	$(srcdir)/UploadStream.cs \
 	$(srcdir)/WebLogger.cs \
+	$(srcdir)/iFolderCertificate.aspx.cs \
 	$(srcdir)/WebSettings.cs \
 	$(srcdir)/WebUtility.cs 
 #	$(srcdir)/../core/Encryption/Blowfish.cs
@@ -82,6 +83,7 @@ iFolderWeb_FORMS = \
 	iFolderEdit.aspx \
 	Share.aspx \
 	Settings.aspx \
+	iFolderCertificate.aspx \
 	Quota.ascx \
 	Header.ascx \
 	Message.ascx \
