Make file changes for install changes
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@6721 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/src/admin/Makefile.am
+++ b/simias/src/admin/Makefile.am
@@ -149,6 +149,7 @@ install-exec-local: all
 	rm -rf `find $(DESTDIR)$(admindir)/images -name .svn`
 	cd $(srcdir)/css; cp -r * $(DESTDIR)$(admindir)/css
 	rm -rf `find $(DESTDIR)$(admindir)/css -name .svn`
+	ln -sf $(DESTDIR)$(admindir)/../web/bin/SimiasLib.dll $(DESTDIR)$(admindir)/bin/
 #if !LINUX
 #	$(INSTALL_PROGRAM) $(LOG4NET_DIR)/log4net.dll $(DESTDIR)$(admindir)/bin
 #endif
