Makefile changes for the utility
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@6757 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/src/server/setup/Makefile.am
+++ b/simias/src/server/setup/Makefile.am
@@ -1,6 +1,6 @@
 # handle Mono secondary dependencies
 export MONO_PATH := $(MONO_PATH)
-SUBDIRS = CertCheck
+SUBDIRS = 
 SimiasServerSetup_CSFILES = \
 	$(srcdir)/SimiasServerSetup.cs \
 	$(srcdir)/HostAdmin.cs \
