Remove generated scripts when running "make clean". (Patch by Jan-Simon Möller) Fixes #248723
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@6759 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/src/server/setup/Makefile.am
+++ b/simias/src/server/setup/Makefile.am
@@ -134,7 +134,7 @@ uninstall-local:
 
 installcheck-local: install
 	
-CLEAN_FILES = SimiasServerSetup.exe iFolderWebSetup.exe iFolderAdminSetup.exe $(DOC_FILE_CLEAN) AssemblyInfo.cs
+CLEAN_FILES = simias-server-setup ifolder-admin-setup ifolder-web-setup SimiasServerSetup.exe iFolderWebSetup.exe iFolderAdminSetup.exe $(DOC_FILE_CLEAN) AssemblyInfo.cs
 
 clean-local:
 	rm -rf $(CLEAN_FILES) $(COMMON_CLEAN_FILES)
