Mkae file changes for utility to get installed and added to RPM
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@6762 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/src/server/setup/Makefile.am
+++ b/simias/src/server/setup/Makefile.am
@@ -119,6 +119,7 @@ else
 	$(INSTALL_PROGRAM) simias-server-setup $(DESTDIR)$(bindir)
 	$(INSTALL_PROGRAM) ifolder-web-setup $(DESTDIR)$(bindir)
 	$(INSTALL_PROGRAM) ifolder-admin-setup $(DESTDIR)$(bindir)
+	$(INSTALL_PROGRAM) utility.exe $(DEBUG_FILES) $(DESTDIR)$(bindir)
 endif
 
 uninstall-local:
@@ -131,6 +132,7 @@ uninstall-local:
 	cd $(DESTDIR)$(bindir); rm -f iFolderAdminSetup.exe $(DEBUG_FILES)
 	cd $(DESTDIR)$(bindir); rm -f ifolder-admin-setup ifolder-admin-setup.cmd
 	cd $(DESTDIR)$(bindir); rm -f iFolderAdminSetup.exe.config
+	cd $(DESTDIR)$(bindir); rm -f utility.exe
 
 installcheck-local: install
 	
