configure.in : avoid expansion and hardcoding of $HOME when substituting simiaslogdir. Also fix the path for Windows XP & Vista.
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@6802 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/configure.in
+++ b/simias/configure.in
@@ -500,14 +500,14 @@ AC_ARG_WITH(runasclient,
 	[runasclient="TRUE"
 	case $SIMIAS_OS in
 		windows) 
-			simiasdatadir=`cygpath --mixed "$USERPROFILE/Local Settings/Application Data/simias"`
-			simiaslogdir="${simiasdatadir}" ;;
+			simiasdatadir=`cygpath --mixed "$APPDATA/simias"`
+			simiaslogdir="\${APPDATA}/simias" ;;
 		linux) 
 			simiasdatadir="$HOME/.local/share/simias"
-			simiaslogdir="${simiasdatadir}" ;;
+			simiaslogdir="\${HOME}/.local/share/simias" ;;
 		darwin) 
 			simiasdatadir="$HOME/.local/share/simias"
-			simiaslogdir="${simiasdatadir}" ;;
+			simiaslogdir="\${HOME}/.local/share/simias" ;;
 	esac],
 	[runasclient="FALSE"]
 	)
