iChain logout feature. Fixes 250186.
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@6816 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/src/admin/Makefile.am
+++ b/simias/src/admin/Makefile.am
@@ -23,6 +23,7 @@ iFolderAdmin_CSFILES = \
 	$(srcdir)/iFolderWebLogger.cs \
 	$(srcdir)/ListFooter.ascx.cs \
 	$(srcdir)/Login.aspx.cs \
+	$(srcdir)/ICLogout.aspx.cs \
 	$(srcdir)/LogTailHandler.ashx.cs \
 	$(srcdir)/MemberSearch.ascx.cs \
 	$(srcdir)/MemberSelect.aspx.cs \
@@ -88,6 +89,7 @@ iFolderAdmin_FORMS = \
 	ListFooter.ascx \
 	Log4Net.config \
 	Login.aspx \
+	ICLogout.aspx \
 	LogTailHandler.ashx \
 	MemberSearch.ascx \
 	MemberSelect.aspx \
