--- a/simias/src/webaccess/Web.config
+++ b/simias/src/webaccess/Web.config
@@ -138,4 +138,12 @@
 		</system.web>
 	</location>
 
+	<location path="ICLogout.aspx">
+		<system.web>
+			<authorization>
+				<allow users="*" />
+			</authorization>
+		</system.web>
+	</location>
+
 </configuration>
