--- a/simias/src/reports/Proxy/AssemblyInfo.cs.in
+++ b/simias/src/reports/Proxy/AssemblyInfo.cs.in
@@ -55,5 +55,5 @@ using System.Runtime.CompilerServices;
 //       documentation for more information on this.
 //
 [assembly: AssemblyDelaySign(false)]
-[assembly: AssemblyKeyFile("")]
+[assembly: AssemblyKeyFile("../../../PublicPrivateKeyFile.snk")]
 [assembly: AssemblyKeyName("")]
