--- a/simias/src/webaccess/AssemblyInfo.cs.in
+++ b/simias/src/webaccess/AssemblyInfo.cs.in
@@ -55,7 +55,7 @@ using System.Runtime.CompilerServices;
 //       documentation for more information on this.
 //
 [assembly: AssemblyDelaySign(false)]
-[assembly: AssemblyKeyFile("")]
+[assembly: AssemblyKeyFile("../../PublicPrivateKeyFile.snk")]
 [assembly: AssemblyKeyName("")]
 
 // Log4Net
