Help button put for web-access along with icon for encryption
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@6831 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/src/webaccess/Log4Net.config
+++ b/simias/src/webaccess/Log4Net.config
@@ -1,6 +1,6 @@
 <log4net>
 	<appender name="RollingLogFileAppender" type="log4net.Appender.RollingFileAppender">
-		<file value="/var/lib/simias/log/web.log" />
+		<file value="/home/anil/datapath/log/web.log" />
 		<appendToFile value="true" />
 		<rollingStyle value="Size" />
 		<maxSizeRollBackups value="10" />
