committing this patch on johny's behalf ---- a fix for bug 270849
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@6837 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/src/admin/Web.config
+++ b/simias/src/admin/Web.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <system.web>
     <httpRuntime executionTimeout="180" maxRequestLength="10240" />
@@ -71,7 +71,7 @@
     <globalization requestEncoding="utf-8" responseEncoding="utf-8" />
   </system.web>
   <appSettings>
-    <add key="SimiasUrl" value="http://localhost/" />
+    <add key="SimiasUrl" value="http://localhost:8088/" />
     <add key="SimiasCert" value="" />
   </appSettings>
   <location path="Default.aspx">
