Check for 32/64 bit arch.
git-svn-id: svn://svn.code.sf.net/p/simias/code/branches/ifolder_3_4_sled10sp1@6854 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/configure.in
+++ b/simias/configure.in
@@ -46,6 +46,24 @@ AM_CONDITIONAL(DARWIN, test "$SIMIAS_OS" = "darwin")
 AM_CONDITIONAL(MONO, test "$CSC" = "mcs")
 AM_CONDITIONAL(DOTNET, test "$CSC" = "csc")
 
+# Check for a 32 / 64
+#HACK ALERT : for libflaim 64bit builds
+case $host_cpu in
+    x86_64)
+       LIB64='lib64'
+    ;;
+    amd64)
+       LIB64='lib64'
+    ;;
+    *)
+       LIB64='lib'
+    ;;
+esac
+
+AC_SUBST(LIB64)
+
+
+
 #
 # We add $prefix to PKG_CONFIG_PATH so pkg-config will find any other
 # packages 'make install'-ed to the same prefix.
