--- a/simias/src/core/Common/Simias.config.in
+++ b/simias/src/core/Common/Simias.config.in
@@ -1,6 +1,6 @@
 <configuration>
   <section name ="Authentication">
-    <setting name="SimiasAuthNotRequired" value="Login.ashx, Simias.asmx:PingSimias, POService.asmx:Invite, Simias.asmx:GetRAList, Simias.asmx:GetRACertificate" />
+    <setting name="SimiasAuthNotRequired" value="Login.ashx, Simias.asmx:PingSimias, POService.asmx:Invite, Simias.asmx:GetRAList, Simias.asmx:GetRACertificate, iFolderBackup.asmx:GetSimiasDataPath, iFolderBackup.asmx:Ping" />
     <setting name="SimiasRequireSSL" value="no" />
   </section>
   <section name="StoreProvider">
