Changes for Certificate, catalog issues, POBox conversion
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@6870 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/src/server/setup/Makefile.am
+++ b/simias/src/server/setup/Makefile.am
@@ -140,6 +140,8 @@ CLEAN_FILES = simias-server-setup ifolder-admin-setup ifolder-web-setup SimiasSe
 
 clean-local:
 	rm -rf $(CLEAN_FILES) $(COMMON_CLEAN_FILES)
+	
+distclean: distclean-local
 
 distclean-local:
 	rm -rf $(COMMON_DISTCLEAN_FILES)
