Changed the delimiter for access log's header value. Fixes #285024.
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@6878 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/src/core/Common/Simias.log4net.in
+++ b/simias/src/core/Common/Simias.log4net.in
@@ -29,7 +29,7 @@
 			<maxSizeRollBackups value="10" />
 			
 			<layout type="log4net.Layout.PatternLayout">
-				<header value="#version: 1.0%n#Fields:\tdate\ttime\tmethod\tstatus\tuser\turi\tid\t%n" />
+				<header value="#version: 1.0%n#Fields:**date**time**method**status**user**uri**id**%n" />
 			</layout>
 		</appender>
 		
