--- a/simias/src/webservices/AssemblyInfo.cs.in
+++ b/simias/src/webservices/AssemblyInfo.cs.in
@@ -6,13 +6,13 @@ using System.Runtime.CompilerServices;
 // set of attributes. Change these attribute values to modify the information
 // associated with an assembly.
 //
-[assembly: AssemblyTitle("")]
-[assembly: AssemblyDescription("")]
+[assembly: AssemblyTitle("Novell-iFolder")]
+[assembly: AssemblyDescription("Simple and Secure storage solution")]
 [assembly: AssemblyConfiguration("")]
 [assembly: AssemblyCompany("Novell, Inc.")]
 [assembly: AssemblyProduct("iFolder")]
-[assembly: AssemblyCopyright("(c) 2004-2005 Novell, Inc.")]
-[assembly: AssemblyTrademark("")]
+[assembly: AssemblyCopyright("(c) 2004-2007 Novell, Inc.")]
+[assembly: AssemblyTrademark("iFolder")]
 [assembly: AssemblyCulture("")]		
 
 //
@@ -55,5 +55,5 @@ using System.Runtime.CompilerServices;
 //       documentation for more information on this.
 //
 [assembly: AssemblyDelaySign(false)]
-[assembly: AssemblyKeyFile("../../PublicPrivateKeyFile.snk")]
+[assembly: AssemblyKeyFile("../../iFolder.snk")]
 [assembly: AssemblyKeyName("")]
